--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,7 +32,7 @@ dependencies:
     sdk: flutter
   camera: ^0.9.4+11
   google_fonts:
-  # alan_voice: 3.0.0
+  alan_voice: 3.0.0
     
 
 
@@ -44,6 +44,7 @@ dependencies:
   firebase_storage: ^11.1.2
   dio: ^5.1.2
   http: ^0.13.4
+  speech_to_text: ^6.1.1
 
 
 dev_dependencies:
