--- a/android/build.gradle
+++ b/android/build.gradle
@@ -29,4 +29,10 @@ subprojects {
 
 task clean(type: Delete) {
     delete rootProject.buildDir
+    
+}
+android {
+    defaultConfig {
+        minSdkVersion 33
+    }
 }
