--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   webview_flutter: ^2.0.14
   flutter_inappwebview: ^5.0.3
   curved_navigation_bar: ^1.0.3
+  audioplayers: ^4.1.0
 
 
 
