--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,7 +49,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   cloud_firestore: ^4.5.2
-  image_picker: ^0.8.7+4
+  image_picker: ^0.8.7
   firebase_storage: ^11.1.2
   dio: ^5.1.2
   http: ^0.13.4
